Use ComparableVersion for update checks